# CQCC-2024

./: CMakeLists.txt  README.md  block_encoding.cpp  block_encoding.hpp  build.sh  main.cpp  plot.py  qda_linear_solver.cpp  qda_linear_solver.hpp
